Fix scrollbars displayed in Java
fixes #9

--- a/sass/_dronekit.scss
+++ b/sass/_dronekit.scss
@@ -11,7 +11,7 @@ h2{
 .highlight-java{
 	width: 100%;
 	max-width: 800px;
-	overflow: scroll;
+	overflow: auto;
 }
 
 pre{
